--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
+VERCEL=0 # Set to 1 if deploying to Vercel, 0 for VPS or Local
+
 PORT=3333
 SPOTIFY_CLIENT_ID="XXXXXX"
 SPOTIFY_CLIENT_SECRET="XXXXXX"
